# contract-cli

./: .gitignore  .task-incomplete  Cargo.toml  README.md
.ritalin/: scope.yaml
clauses/consulting/: standard.toml
clauses/msa/: standard.toml
clauses/nda/: standard.toml
clauses/service/: standard.toml
clauses/sow/: standard.toml
src/: clauses.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  output.rs  render.rs  typst_assets.rs
src/commands/: agent_info.rs  clauses.rs  clients.rs  config.rs  contracts.rs  doctor.rs  issuers.rs  mod.rs  pack.rs  skill.rs  template.rs  update.rs
typst/shared/: components.typ  contract.typ
typst/templates/: editorial.typ  helvetica-nera.typ  vienna-legal.typ
