[package]
name = "contract-cli"
version = "0.1.0"
edition = "2021"
description = "Beautiful contracts from the CLI — NDAs, consulting agreements, MSAs, SOWs. Plain English, 1–3 pages, agent-friendly."
license = "MIT"
repository = "https://github.com/paperfoot/contract-cli"
readme = "README.md"
keywords = ["contract", "nda", "consulting", "typst", "pdf"]
categories = ["command-line-utilities"]

[[bin]]
name = "contract"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
finance-core = { path = "../finance-core", version = "0.4" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
